[package]
name = "exloli"
description = "根据指定关键词从 E 站下载本子并上传到 telegraph 并发布到 Telegram 频道"
version = "0.5.3"
authors = ["Aloxaf <aloxafx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 网络相关
# TODO: 啥时候升级下 libxml
libxml = "0.2.15"
reqwest = { version = "0.11.2", features = ["json", "cookies", "gzip", "socks", "brotli"] }
tempfile = "3.1.0"
v_htmlescape = "0.15.1"
teloxide = { version = "0.10.1", features = ["auto-send", "macros"] }
tokio = { version = "1.4.0", features = ["time", "rt-multi-thread", "macros"] }
telegraph-rs = { version = "0.5.0", git = "https://github.com/Aloxaf/telegraph-rs" }
futures = "0.3.5"
tokio-stream = "0.1.5"
url = { version = "2.2.1", features = ["serde"] }

# 配置文件解析
toml = "0.5.6"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"

# 杂项
anyhow = "1.0.31"
once_cell = "1.5.2"
unicode-width = "0.1.8"
regex = "1.4.3"
uuid = { version = "1.1.2", features = ["v3"] }
getopts = "0.2.21"
diesel = { version = "1.4.5", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
dotenv = "0.15.0"
chrono = "0.4.19"

# 日志
log = "0.4.11"
env_logger = "0.9.0"
dashmap = "5.3.4"

[dependencies.image]
version = "0.23.14"
default-features = false
features = ["gif", "jpeg", "png"]
